# devguard

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  action.yml  devguard.example.toml
.github/workflows/: devguard.yml
src/: cli.rs  config.rs  main.rs  score.rs
src/core/: issue.rs  mod.rs  report.rs  scanner.rs  score.rs
src/providers/: mod.rs  stripe.rs  supabase.rs  vercel.rs
src/report/: human.rs  json.rs  markdown.rs  mod.rs  sarif.rs
src/utils/: fs.rs  git.rs
