[package]
name = "devguard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
once_cell = "1.20"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
