[package]
name = "devguard"
version = "0.1.0"
edition = "2024"
description = "CLI repository hygiene checks for secrets, env setup, git health, and provider best practices."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aryasalem09/devguard"
readme = "README.md"
keywords = ["cli", "security", "devops", "secrets", "lint"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "devguard.example.toml",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
once_cell = "1.20"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
